<resources>
    <string name="app_name">cooking</string>
    <string name="start">Старт</string>
    <string name="end">Стоп</string>
    <string name="head">Рецепты</string>
    <string name="eggs">Скрэмбл</string>
    <string name="recipe2">Жареная овсянка с яйцом</string>
    <string name="recipe3">Жаркое по-деревенски</string>
    <string name="recipe4">Жюльен с курицей и грибами</string>
    <string name="recipe5">Сосиски в тесте (на сковороде)</string>
    <string name="settings">Настройки</string>
    <string name="changelang">Выбор языка</string>
    <string name="ru">Русский</string>
    <string name="eng">Английский</string>
    <string name="ch">Китайский</string>


    <string name="breakfast">Завтрак</string>
    <string name="lunch">Обед</string>
    <string name="dinner">Ужин</string>
    <string name="descr1">Стандартная порция – 2 яйца на одного человека.
        \n1. Тщательно перемешайте яйца вилкой. Пышная пена здесь не нужна, главное, очень хорошо смешать желтки и белки, чтобы получить однородную смесь.
        \n2. На небольшом огне растопите сливочное масло и влейте яичную смесь. Подождите несколько секунд, чтобы смесь слегка схватилась, а затем начинайте аккуратно двигать смесь лопаткой, как бы рисуя восьмерку (подробнее смотрите в видеоверсии рецепта).
        Всегда готовьте блюдо на маленьком огне, добавляйте соль только в конце приготовления и выключайте огонь за несколько секунд до того, как яичная смесь будет полностью готова.
        \n3. Выключив огонь, добавьте соль по вкусу и оставьте яйца в остывающей сковороде еще на несколько секунд. Под действием остаточного тепла сковороды яичная смесь дойдет до готовности, при этом она не пережарится и сохранит естественную сочность
    </string>
    <string name="descr2">Понадобится хорошая сковорода с антипригарным покрытием, её нужно поставить разогреваться на минимальный огонь.
        \n1. На СУХУЮ сковороду высыпать овсяные хлопья (лучше всего подойдут хлопья, на упаковке которых указано время приготовления 5-7 минут).
        \n2. Периодически помешивая, обжарить хлопья в течение трех минут. Масло или воду добавлять не нужно.
        \n3. Когда вы почувствуете приятный ореховый аромат и увидите, что овсянка стала слегка румяниться, можно добавлять яйцо.
        \n4.На этом этапе нужно очень энергично перемешать хлопья с яйцом деревянной лопаткой, чтобы оно равномерно распределилось по всей сковороде.
        \n5. Дальше необходимо закрыть сковороду крышкой, подержать 1 минуту на минимальном огне, а затем выключить огонь и подержать еще 1 минуту, чтобы овсянка стала более мягкой. Завтрак из овсянки с яйцом готов!
    </string>
    <string name="descr3">Понадобится хорошая сковорода с антипригарным покрытием, её нужно поставить разогреваться на минимальный огонь.
        \n1.В сотейнике растопить сало, нарезанное мелкими кубиками. Добавить мясо, нарезанное небольшими кусочками. Обжарить до румяной корочки.
        \n2.Затем добавить морковь, нарезанную кружочками. Обжаривать 5 минут.
        \n3.Лук, нарезанный полукольцами. Обжаривать 5 минут.
        \n4.Болгарский перец, нарезанный дольками. Ещё 5 минут.
        \n5.Добавить крупно нарезанный картофель, кусочек сливочного масла, 200 мл воды, специи, сушёную петрушку и соль. Не перемешивать.
            Накрыть крышкой, убавить огонь и тушить на медленном огне 40 минут
        \n6.В конце приготовления добавить нарезанную свежую зелень, измельчённый чеснок. Перемешать и снять с огня.
    </string>
    <string name="descr4">1.Подготовьте все необходимые ингредиенты.Вам потребуется больше или меньше сосисок в зависимости от их длины и толщины.
        \n2.В кефир просейте муку, добавьте соль и соду.
        \n3.Замесите тесто.
        \n4.Посыпьте стол мукой и выложите тесто, хорошенько вымесите его. Накройте тесто полотенцем и оставьте на 15 минут.
        \n5.Очистите сосиски от пленки.
        \n6.Раскатайте тесто в прямоугольник толщиной 3 мм и разрежьте его на 8 полосок.
        \n7.Оберните каждую сосиску полоской теста внахлест.
        \n8.В сковороде разогрейте растительное масло. Выложите сосиски в тесте на сковороду.
        \n9.Обжарьте сосиски в тесте на среднем огне до румяной корочки со всех сторон. На это уйдет примерно 10 минут.
        \n10.По желанию готовые сосиски в тесте можно немного промокнуть бумажным полотенцем, чтобы
    впиталось лишнее масло.</string>
    <string name="descr5">
        1.
Подготовьте все ингредиенты по рецепту жюльена с курицей и грибами.
        \n2.Куриное филе нарежьте небольшими кусочками.
        \n3.Курицу обжарьте на растительном масле несколько минут до полуготовности.
Лук мелко нарежьте, добавьте к курице и жарьте куриное филе с луком еще 3-4 минуты.
        \n4.
Шампиньоны крупно нарежьте и добавьте в сковороду.
После того, как выпарится влага из грибов, посолите, поперчите и готовьте курицу с луком и грибами еще 5-7 минут, до золотистого цвета.
        \n5.Залейте мясо и грибы сливками, немного прогрейте всё вместе.
        \n6.
Сыр натрите на крупной терке и выложите сверху.
Выключите огонь и накройте сковороду крышкой.
        \n7.
Когда через 3-5 минут сыр расплавится, жюльен с грибами и курицей можно подавать к столу.
        \n8.Если ваша сковорода позволяет, украсьте жульен с курицей листиками базилика и подавайте к столу прямо в этой посуде.
         </string>
    <string name="minute">минут</string>
    <string name="products">Ингридиенты</string>
    <string name="composition">Яйцо куриное – 4 шт.
        \nСливочное масло – 1-2 ст.л.
        \nСметана – 1 ст.л. (по желанию)
        \nЗеленый лук – 2-3 стебля
        \nСоль – по вкусу</string>
    <string name="composition1">Хлопья овсяные – 50 г.
                    \nЯйцо куриное – 1 шт.
                    \nФрукты – по желанию
                    \nМед – по желанию</string>
    <string name="composition2">Свиная корейка без кости - 1 кг
                    \nСало свиное свежее - 50 г
                    \nМасло сливочное - 50 г
                    \nКартофель - 1 кг
                    \nПерец болгарский - 1 шт.
                    \nМорковь - 2 шт.
                    \nЛук репчатый - 2 шт.
                    \nЧеснок - 2 зубчика
                    \nЗелень петрушки свежая - по вкусу
                    \nЗелень петрушки сушёная - по вкусу
                    \nСпеции для мяса - по вкусу</string>
    <string name="composition3">Сосиски - 8 шт.
                    \nМука пшеничная - 160 г + на подпыл
                    \nКефир - 25 мл
                    \nСода - 1/4 ч. ложки
                    \nСоль - 1/4 ч. ложки
                    \nМасло растительное (для жарки) - 2-3 ст. ложки</string>
    <string name="composition4">Филе куриное - 400 г
                    \nГрибы шампиньоны - 300 г
                    \nЛук репчатый - 100 г
                    \nСливки 20-30% - 200 мл
                    \nСыр твердый - 150 г
                    \nМасло растительное - 2 ст. ложки
                    \nСоль - по вкусу
                    \nПерец черный молотый - по вкусу</string>
    <string name="process">Процесс приготовления</string>
    <string name="eat1">Одно из самых популярных блюд, которое подают на завтрак в европейских отелях. Яичница-болтунья, но приготовленная по особому, что придает этому блюду очень нежную структуру. Готовится легко и быстро.</string>
    <string name="eat2">Для этого рецепта необходимо взять овсяные хлопья и большое яйцо. Всё! Никакого растительного или сливочного масла, воды, молока и т.д. Варить ничего не надо. Если хотите разнообразить вкус, добавьте ягоды или фрукты, или полейте овсянку мёдом или вареньем.</string>
    <string name="eat3">Простое, но очень ароматное и вкусное блюдо для семейного обеда или ужина.</string>
    <string name="eat4">Приготовьте такие сочные и вкусные сосисочки в хрустящем тесте на обычной сковороде утром в выходной.</string>
    <string name="eat5">Очень популярную закуску - жульен (или точнее жюльен) с курицей и грибами, можно приготовить на сковороде, примерно за полчаса, совершенно не напрягая себя приобретением кокотниц и доведением блюда до готовности в духовке.</string>
</resources>